# auto-abloop

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: analysis.rs  audio.rs  export.rs  gui.rs  i18n.rs  lib.rs  main.rs  player.rs
web/: index.html
